syntax = "proto3";

package corruptible;

import "google/protobuf/empty.proto";

option go_package = "insecure/proto";

// to compile this file, run:
// protoc insecure/proto/attacker.proto --go_out=plugins=grpc:.

// CorruptibleConduitFactory implements the service provided by a corruptible conduit conduit.
// It allows an attack to register itself to the conduit, and hence takes the control
// of the conduit by sending messages on its behalf.
service CorruptibleConduitFactory {
  rpc RegisterAttacker(AttackerRegisterMessage) returns (google.protobuf.Empty) {}
  rpc ProcessAttackerMessage(Message) returns (google.protobuf.Empty) {}
}

service Attacker {
  rpc Observe(Message) returns (google.protobuf.Empty) {}
}

// Message is represents the message exchanged between the Zombi and Attacker services.
message Message {
  string ChannelID = 1;
  bytes OriginID = 2;
  uint32 targets = 3;
  repeated bytes TargetIDs = 4;
  bytes Payload = 5;
  string Type = 6;
  Protocol protocol = 7;
}

enum Protocol {
  UNKNOWN = 0;
  UNICAST = 1;
  MULTICAST = 2;
  PUBLISH = 3;
}

// AttackerRegisterMessage is the message an attacker uses to register itself to the chosen CorruptibleConduitFactory,
// and takes its control.
message AttackerRegisterMessage {
  string address = 1;
}